<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background"
    tools:context=".ui.activity.AboutActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/activity_background"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/about_iv_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:padding="2dp"
            android:src="@drawable/ic_left_arrow_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/about_title"
            android:textColor="@color/black"
            android:textSize="@dimen/activity_title_text_size"/>
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:layout_marginTop="70dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/VersionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/about_version_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/about_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/VersionName">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_settings_group"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/gdal_text"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/about_gdal_version"
                    android:textColor="@color/black" />

                <!-- GDAL 支持的矢量驱动列表，点击上方版本行折叠/展开 -->
                <TextView
                    android:id="@+id/gdal_drivers_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:paddingBottom="8dp"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_settings_group">

                <TextView
                    android:id="@+id/proj_text"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/about_proj_version"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_settings_group">

                <TextView
                    android:id="@+id/VersionCode"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/about_version_code"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_settings_group">

                <TextView
                    android:id="@+id/about_check_update"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/about_check_update"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/about_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/about_copyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/about_app_copy"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/about_git_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:gravity="center"
            android:text="@string/about_git_link"
            android:textSize="12sp"
            android:textColor="#1976D2" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>